--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
     <meta name="description" content="SunPlayer在线音乐播放器"/>
     <link rel="icon" type="images/x-icon" href="./static/favicon.ico">
     <title>SunPlayer</title>
+    <style type="text/css">
+        noscript{position:fixed;top:0;right:0;bottom:0;left:0;z-index:1996520;background:#fff;text-align:center;font-weight:700;font-size:34px;line-height:100px}#appLoading{position:fixed;top:0;left:0;z-index:1996;width:100%;height:100%;background:rgba(255,255,255,1)}#appLoading.removeAnimate{-webkit-animation:removeAnimate 1s 0s 1 both}@-webkit-keyframes@-webkit-keyframes removeAnimate{from{opacity:1}to{opacity:0}}#appLoading img{position:absolute;top:50%;left:50%;width:50px;height:50px;-webkit-transform:translateY(-50%) translateX(-50%);transform:translateY(-50%) translateX(-50%)}
+    </style>
   </head>
   <body>
-    <!--<div id="appLoading">
+    <noscript>
+        SunPlayer在线音乐播放器<br/>为了更好的体验请开启script
+    </noscript>
+    <div id="appLoading">
         <img src="./static/loading.gif" alt="loading">
-    </div>-->
+    </div>
     <div id="SunPlayer"></div>
     <!-- built files will be auto injected -->
   </body>
